fixed blank extra space when scrolled to right created by relative positioning on landing page's text. Also minimized project text's container to solve same problem on project page

--- a/src/components/styles/landingPage.module.css
+++ b/src/components/styles/landingPage.module.css
@@ -2,12 +2,13 @@
     background: url("../../images/landing-page.svg") no-repeat top;
     height: 155vh;
     background-size: cover;
+    position: relative;
 }
 
 nav li {
     float: right;
     color: #e9cbb6;
-    margin-top: 25px;
+    margin-top: 20px;
     margin-right: 65px;
     font-family : "museo sans", sans-serif;
     font-size : 22px;
@@ -17,9 +18,6 @@ nav li {
 
 nav ul {
     list-style: none;
-    /* border clears weird space at top of viewport created by html tag */
-    margin-top: 0;
-    border: 1px solid #130e13;
 }
 
 header p {
@@ -32,28 +30,28 @@ header p {
     font-weight: 700;
     font-size : 70px;
     color : #F39F53;
-    margin-top: 190px;
 
-    position: relative;
+    position: absolute;
     left: 36%;
-    top: 25px;
+    top: 20%;
 }
 
 .myNameIs {
     font-family : "museo sans", sans-serif;
-    font-size : 30px;
+    font-size : 27px;
     letter-spacing : -1.23px;
     color : #E9CBB6;
     text-transform: uppercase;
 
-    position: relative;
+    position: absolute;
     left: 36%;
-    top: 20px;
+    top: 27%;
 }
 
 .nameAndDesc {
-    position: relative;
+    position: absolute;
     left: 26.5%;
+    top: 28.5%;
 }
 
 .nameAndDesc h1 {
