--- a/src/components/styles/phytochor.module.css
+++ b/src/components/styles/phytochor.module.css
@@ -6,7 +6,7 @@
 }
 
 .allText {
-    width: 50%;
+    width: 40%;
     position: absolute;
     top: 15%;
     left: 50%;
